2010-03-30  Chris Evans  <cevans@chromium.org>

        Reviewed by Adam Barth.

        Add test for SVG pattern canvas tainting.

        https://bugs.webkit.org/show_bug.cgi?id=36838

        * fast/canvas/svg-taint.html: Added
        * fast/canvas/svg-taint-expected.txt: Added
        * fast/canvas/resources/empty.svg: Added

2010-04-16  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7873647> Crash when updating hover state

        * fast/dynamic/hover-style-recalc-crash-expected.txt: Added.
        * fast/dynamic/hover-style-recalc-crash.html: Added.

2010-03-31  Mark Rowe  <mrowe@apple.com>

        Reviewed by Darin Adler.

        <http://webkit.org/b/36878> REGRESSION: Trailing colon on hostnames (with no port specified) causes "Not allowed to use restricted network port"

        Add explicit tests for handling of allowed ports.  We currently only test the ports that map to port 80: 0, 80, and "".

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html:

2010-03-24  Mark Rowe  <mrowe@apple.com>

        Revert the portion of r56489 that dealt with port zero as it introduced some test failures.

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html:

2010-03-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Darin Adler.

        WebKit should treat port numbers outside the valid range as being blacklisted
        <http://webkit.org/b/36571> / <rdar://problem/7790908>

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html: Add tests of a few invalid port numbers.

2010-07-02  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Canvas arcTo() should draw straight line to p1 if p0, p1 and p2 are collinear

        The implementation of PathQt's addArcTo() was not float-safe and also had